# kifa

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.lazyfs.yml  rust-toolchain.toml
.cargo/: config.toml  release.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  config.yml
.github/workflows/: ci.yml  crash-test.yml  docs.yml  release.yml
docker/: Dockerfile.crash-test  lazyfs.toml  mount-lazyfs.sh
docker/lazyfs/: Dockerfile  entrypoint.sh  lazyfs.toml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: DataFlowDiagram.astro
docs/src/content/docs/: contributing.md  index.mdx  install.mdx  quick-start.mdx  security.md  why-kifa.md
docs/src/content/docs/guides/: configuration.mdx  daemon.mdx  deployment.mdx  exporting.mdx  flush-modes.mdx  ingest.mdx  querying.mdx
docs/src/content/docs/internals/: architecture.md  architecture.mdx
docs/src/content/docs/reference/: changelog.mdx  cli.md  config.md
docs/src/styles/: custom.css
examples/: crash-test.rs  crash-test.sh  gen-transactions.rs
lazyfs/: Dockerfile.crash-test  run-crash-test.sh
lib-kifa/: Cargo.toml
lib-kifa/benches/: throughput.rs
lib-kifa/src/: buffer.rs  compaction.rs  engine.rs  helpers.rs  lib.rs  manifest.rs  memtable.rs  sstable.rs  wal.rs
lib-kifa/tests/: integration.rs
simd/: Cargo.toml
simd/src/: json.rs  lib.rs
src/: cmd.rs  config.rs  ingester.rs  main.rs  query.rs  source.rs
systemd/: kifa.service
