[package]
name = "kifa"
description = "Crash-proof local logging for POS and mobile money systems."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = "1.93.0"

[workspace]
resolver = "3"
members = [".", "lib-kifa"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
lib-kifa = { path = "./lib-kifa" }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[dev-dependencies]
tempfile = "3.24.0"
