[package]
name = "kifa"
description = "Crash-proof local logging for POS and mobile money systems."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
rust-version = "1.93.0"

[workspace]
resolver = "3"
members = [".", "lib-kifa"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
log = "0.4.29"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["clap"] }
env_logger = "0.11.8"
humantime = "2.3.0"
lib-kifa = { path = "./lib-kifa" }
log = { workspace = true }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.3"
toml = "0.9.11"

[dev-dependencies]
fastrand = "2.3.0"
jiff = "0.2.18"
tempfile = "3.24.0"

[[example]]
name = "gen-transactions"
