[package]
name = "kifa"
description = "Crash-proof local logging for POS and mobile money systems."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.93.0"
repository.workspace = true
keywords = ["logging", "crash-proof", "pos", "edge", "storage-engine"]
categories = ["database-implementations", "command-line-utilities"]

[package.metadata.deb]
maintainer = "Success Kingsley <xosnrdev@gmail.com>"
section = "utils"
priority = "optional"
depends = "libc6"
assets = [
    ["target/release/kifa", "usr/bin/", "755"],
    ["systemd/kifa.service", "usr/lib/systemd/system/kifa.service", "644"],
    ["README.md", "usr/share/doc/kifa/README.md", "644"],
    ["LICENSE-MIT", "usr/share/doc/kifa/LICENSE-MIT", "644"],
    ["LICENSE-APACHE", "usr/share/doc/kifa/LICENSE-APACHE", "644"],
]
systemd-units = { unit-name = "kifa", enable = false, start = false }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/kifa", dest = "/usr/bin/kifa", mode = "755" },
    { source = "systemd/kifa.service", dest = "/usr/lib/systemd/system/kifa.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/kifa/README.md", mode = "644", doc = true },
    { source = "LICENSE-MIT", dest = "/usr/share/doc/kifa/LICENSE-MIT", mode = "644", doc = true },
    { source = "LICENSE-APACHE", dest = "/usr/share/doc/kifa/LICENSE-APACHE", mode = "644", doc = true },
]

[workspace]
resolver = "3"
members = [".", "lib-kifa"]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Success Kingsley <xosnrdev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xosnrdev/kifa"

[workspace.dependencies]
log = "0.4.29"

[features]
crash-test = ["lib-kifa/crash-test"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }
clap-cargo = { version = "0.18.3", features = ["clap"] }
env_logger = "0.11.8"
humantime = "2.3.0"
lib-kifa = { path = "./lib-kifa" }
log.workspace = true
memchr-rs = { version = "1.0.11", features = ["memchr"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.3"
toml = "0.9.11"

[dev-dependencies]
ctrlc = "3.5.1"
fastrand = "2.3.0"
jiff = "0.2.18"
sysinfo = "0.38.0"
tempfile = "3.24.0"

# See https://doc.rust-lang.org/cargo/reference/profiles.html
# See also https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
[profile.release]
opt-level = "s"
debug = "full"
codegen-units = 1
lto = true
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[profile.profiling]
inherits = "release"
strip = "none"
split-debuginfo = "off"
