[package]
name = "lib-kifa"
description = "Crash-proof storage engine for log persistence."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
crc32fast = "1.5.0"
libc = "0.2.180"
log = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
