[package]
name = "lib-kifa"
description = "Crash-proof storage engine for log persistence."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
crash-test = []

[dependencies]
crc32fast = "1.5.0"
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.180"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.24.0"

[[bench]]
name = "throughput"
harness = false
